feat(platform): harden tenancy and durable delivery